--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/jalna2.JPG" alt="" class="lydia-dp" data-node-name="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
@@ -122,10 +122,19 @@
     <div class="nine">
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
+      <p id="replay" data-node-name="replayText"><a href="https://open.spotify.com/playlist/6zqWEwwftOtsCYe4WDGx1o?si=3b64209376d54269">Here are some playlist for you, hope you like it!</a></p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
+
+      <!-- <h4 style="margin-top: 10px; z-index: -1">Here are some playlist for you, hope you like it!</h4> -->
+      <!-- <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6zqWEwwftOtsCYe4WDGx1o?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> -->
+
     </div>
   </div>
 </body>
+
+<audio autoplay loop playsinline>
+			<source src="audio/its-your-day.mp3" type="audio/mpeg">
+</audio>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
