--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </body>
 
 <audio autoplay loop playsinline>
-			<source src="audio/its-your-day.mp3" type="audio/mpeg">
+			<source src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3" type="audio/mpeg">
 </audio>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
