--- a/index.html
+++ b/index.html
@@ -132,10 +132,17 @@
   </div>
 </body>
 
-<audio autoplay loop playsinline>
+<!-- <audio autoplay loop playsinline>
 			<source src="https://github.com/arasydafa/happy-birthday/blob/main/audio/its-your-day.mp3?raw=true" type="audio/mpeg">
-</audio>
-
+</audio> -->
+<script>
+var audio = document.createElement('audio');
+audio.setAttribute('autoplay', '');
+audio.setAttribute('loop', '');
+audio.setAttribute('playsinline', '');
+audio.setAttribute('src', 'https://github.com/arasydafa/happy-birthday/blob/main/audio/its-your-day.mp3?raw=true');
+document.body.appendChild(audio);
+</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
 
