try use iframe on audio

--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
   </div>
 </body>
 
-<audio autoplay loop playsinline>
+<!-- <audio autoplay loop playsinline>
 			<source src="https://github.com/arasydafa/happy-birthday/blob/main/audio/its-your-day.mp3?raw=true" type="audio/mp3?raw">
-</audio>
+</audio> -->
+<iframe src="https://github.com/arasydafa/happy-birthday/blob/main/audio/its-your-day.mp3?raw=true" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 <!-- <script>
 var audio = document.createElement('audio');
 audio.setAttribute('autoplay', '');
