change audio tag

--- a/index.html
+++ b/index.html
@@ -132,10 +132,9 @@
   </div>
 </body>
 
-<!-- <audio autoplay loop playsinline>
-			<source src="https://github.com/arasydafa/happy-birthday/blob/main/audio/its-your-day.mp3?raw=true" type="audio/mp3?raw">
-</audio> -->
-<iframe src="https://github.com/arasydafa/happy-birthday/blob/main/audio/its-your-day.mp3?raw=true" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+<audio src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3" autoplay loop playsinline>
+			<!-- <source src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3?raw=true" type="audio/mp3?raw"> -->
+</audio>
 <!-- <script>
 var audio = document.createElement('audio');
 audio.setAttribute('autoplay', '');
