--- a/index.html
+++ b/index.html
@@ -132,17 +132,30 @@
   </div>
 </body>
 
-<audio src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3" autoplay loop playsinline>
-			<!-- <source src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3?raw=true" type="audio/mp3?raw"> -->
+<audio preload="auto" autoplay loop id="playAudio">
+			<source src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3" type="audio/mp3">
 </audio>
-<!-- <script>
-var audio = document.createElement('audio');
-audio.setAttribute('autoplay', '');
-audio.setAttribute('loop', '');
-audio.setAttribute('playsinline', '');
-audio.setAttribute('src', 'https://github.com/arasydafa/happy-birthday/blob/main/audio/its-your-day.mp3?raw=true');
-document.body.appendChild(audio);
-</script> -->
+
+<iframe src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+</iframe> 
+
+<script>
+// var audio = document.createElement('audio');
+// audio.setAttribute('autoplay', '');
+// audio.setAttribute('loop', '');
+// audio.setAttribute('playsinline', '');
+// audio.setAttribute('src', 'https://github.com/arasydafa/happy-birthday/blob/main/audio/its-your-day.mp3?raw=true');
+// document.body.appendChild(audio);
+
+var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
+  if (!isChrome){
+      $('#iframeAudio').remove()
+  }
+  else {
+      $('#playAudio').remove() 
+  }
+</script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
 
