--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 			<source src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3" type="audio/mp3">
 </audio>
 
-<iframe src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-</iframe> 
+<!-- <iframe src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+</iframe>  -->
 
 <script>
 // var audio = document.createElement('audio');
@@ -147,13 +147,13 @@
 // audio.setAttribute('src', 'https://github.com/arasydafa/happy-birthday/blob/main/audio/its-your-day.mp3?raw=true');
 // document.body.appendChild(audio);
 
-var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
-  if (!isChrome){
-      $('#iframeAudio').remove()
-  }
-  else {
-      $('#playAudio').remove() 
-  }
+// var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
+//   if (!isChrome){
+//       $('#iframeAudio').remove()
+//   }
+//   else {
+//       $('#playAudio').remove() 
+//   }
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
