--- a/index.html
+++ b/index.html
@@ -125,52 +125,16 @@
       <p id="replay" data-node-name="replayText"><a href="https://open.spotify.com/playlist/6zqWEwwftOtsCYe4WDGx1o?si=3b64209376d54269">Here are some playlist for you, hope you like it!</a></p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
 
-      <h4 id="playButton" style="margin-top: 10px; z-index: -1; cursor: pointer;">Here are some playlist for you, hope you like it!</h4>
-
-      <audio preload="auto" loop id="playAudio">
-        <source src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3" type="audio/mp3">
-      </audio>
+      <!-- <h4 style="margin-top: 10px; z-index: -1">Here are some playlist for you, hope you like it!</h4> -->
       <!-- <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6zqWEwwftOtsCYe4WDGx1o?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> -->
 
     </div>
   </div>
 </body>
 
-<!-- <audio preload="auto" autoplay loop id="playAudio">
-			<source src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3" type="audio/mp3">
-</audio> -->
-
-<!-- <iframe src="https://raw.githubusercontent.com/arasydafa/happy-birthday/main/audio/its-your-day.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-</iframe>  -->
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-  const playButton = document.getElementById('playButton');
-  const audio = document.getElementById('playAudio');
-
-  playButton.addEventListener('click', function() {
-    if (audio.paused) {
-      audio.play();
-    } else {
-      audio.pause();
-    }
-  });
-});
-// var audio = document.createElement('audio');
-// audio.setAttribute('autoplay', '');
-// audio.setAttribute('loop', '');
-// audio.setAttribute('playsinline', '');
-// audio.setAttribute('src', 'https://github.com/arasydafa/happy-birthday/blob/main/audio/its-your-day.mp3?raw=true');
-// document.body.appendChild(audio);
-
-// var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
-//   if (!isChrome){
-//       $('#iframeAudio').remove()
-//   }
-//   else {
-//       $('#playAudio').remove() 
-//   }
-</script>
+<audio autoplay loop playsinline>
+			<source src="https://github.com/arasydafa/happy-birthday/blob/main/audio/its-your-day.mp3?raw=true" type="audio/mpeg">
+</audio>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
