muted audio tag

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </div>
 </body>
 
-<audio autoplay loop playsinline>
+<audio autoplay muted loop playsinline>
 			<source src="https://arasydafa.github.io/happy-birthday/its-your-day.mp3" type="audio/mpeg">
 </audio>
 
