--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="nine">
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
-      <p id="replay" data-node-name="replayText"><a href="https://open.spotify.com/playlist/6zqWEwwftOtsCYe4WDGx1o?si=3b64209376d54269">Here are some playlist for you, hope you like it!</a></p>
+      <p id="replay" data-node-name="replayText"><a href="https://open.spotify.com/playlist/6zqWEwwftOtsCYe4WDGx1o?si=3b64209376d54269" target="_blank">Here are some playlist for you, hope you like it!</a></p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
 
       <!-- <h4 style="margin-top: 10px; z-index: -1">Here are some playlist for you, hope you like it!</h4> -->
