--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
   </body>
 
-  <audio autoplay muted loop playsinline>
+  <audio autoplay loop playsinline>
     <source src="https://arasydafa.github.io/happy-birthday/its-your-day.mp3" type="audio/mpeg">
   </audio>
 
